# bytedance_competition

./: .env.example  .gitignore  test.py
bridge-node/: package-lock.json  package.json  run_agent_task.js
cua-lark/: .env.example  README.md  pyproject.toml
cua-lark/bridge-node/: worker.mjs
cua-lark/cases/im/: m1_click_calendar_tab.yaml  m1_click_contacts_tab.yaml  m1_click_messages_tab.yaml  m1_click_search.yaml  m1_click_workspace_tab.yaml
cua-lark/src/cua_lark/: __init__.py  cli.py  config.py  graph.py  schemas.py  state.py
cua-lark/src/cua_lark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cua-lark/src/cua_lark/nodes/: __init__.py  execute.py  load_case.py  report.py  verify.py
cua-lark/src/cua_lark/tools/: __init__.py  bridge.py
