[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cua-lark"
version = "0.1.0"
description = "CUA-Lark test agent (M1): LangGraph + UI-TARS bridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.20",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.0",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[project.scripts]
cua-lark = "cua_lark.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
